feat/get professor balance service/controller/unit tests db models and route
